# sysnp

./: .gitignore  .gitmodules  Makefile  README  README.md  cpu.cpp  cpu.h  cpu0.cpp  cpu0.h  cpu_base.h  device.h  exceptions.h  hardware.conf  machine.cpp  machine.h  main.cpp  mainboard.h  memory.cpp  memory.h  nbus.cpp  nbus.h  np16.cpp  np16.h  np16_2.cpp  np16_2.h  util.cpp  util.h
data/: hardware.conf  hardware.yaml  n16r.arch  serial.sh
data/bios/: bios.S  monitor.S  n16r.arch  testRig.S  utils.S
data/bios/driver/: serial.S
legacy/: cpu_base.cpp  exceptions.h  system.S
src/: CMakeLists.txt  device.h  machine.cpp  machine.h  main.cpp
src/machine/: CMakeLists.txt  device.h  machine.cpp  machine.h
src/machine/nbus/: CMakeLists.txt  memory.cpp  memory.h  nbus.cpp  nbus.h  serial.cpp  serial.h
src/machine/nbus/cpu/: CMakeLists.txt  busunit.cpp  busunit.h  cache.cpp  cache.h  memoryUnit.cpp  memoryUnit.h  n16r.cpp  n16r.h  tlb.cpp  tlb.h
src/nbus/: CMakeLists.txt  memory.cpp  memory.h  nbus.cpp  nbus.h  serial.cpp  serial.h
src/nbus/cpu/: CMakeLists.txt  executionbuffer.cpp  n16r.cpp  n16r.h
src/tests/: CMakeLists.txt  caches.cpp  memory.cpp  nbus.cpp  serial.cpp
src/tests/cpu/: CMakeLists.txt  caches.cpp  memoryUnit.cpp
